Fix build problem of UI resources not integrated into UI JAR

--- a/build.gradle
+++ b/build.gradle
@@ -29,23 +29,22 @@ allprojects {
     }
 
     ext.versions = [
-        dropwizard        : '0.9.2',
-        orika             : '1.4.6',
-        morphia           : '1.1.1',
-        slf4j             : '1.7.13',
-        spring            : '4.2.4.RELEASE',
-        jackson           : '2.6.4',
-        junit             : '4.12',
-        assertj           : '3.3.0',
-        mockito           : '1.10.19',
+        dropwizard: '0.9.2',
+        orika     : '1.4.6',
+        morphia   : '1.1.1',
+        slf4j     : '1.7.13',
+        spring    : '4.2.4.RELEASE',
+        jackson   : '2.6.4',
+        junit     : '4.12',
+        assertj   : '3.3.0',
+        mockito   : '1.10.19',
     ]
 
-    project.ext.replaceDependencyGroupVersion =  { DependencyResolveDetails details, String group, String version ->
+    project.ext.replaceDependencyGroupVersion = { DependencyResolveDetails details, String group, String version ->
         if (details.requested.group == group || details.requested.group.startsWith(group + ".")) {
             details.useVersion version
         }
     }
-
 
     // Maven plugin
 
@@ -187,8 +186,6 @@ project("${rootProject.name}-ui") {
     apply plugin: 'java'
     apply plugin: 'com.google.osdetector'
 
-    sourceSets.main.resources.srcDir('build/dist')
-
     // Determine grunt command to lauch based on current OS
     def gruntCmd = 'grunt'
     if (osdetector.os == 'windows') {
@@ -211,7 +208,13 @@ project("${rootProject.name}-ui") {
         outputs.dir('build/dist')
     }
 
-    tasks.jar.dependsOn uiDist
+    tasks.processResources.dependsOn uiDist
+
+    project.afterEvaluate {
+
+        project.sourceSets.main.resources.srcDir('build/dist')
+
+    }
 
     task uiTest(type: Exec, description: 'Run UI tests') {
         commandLine gruntCmd, 'test'
