--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ jdk:
 
 before_install:
   # Install PhantomJS
+  - sudo apt-get install libicu52 libjpeg8 libfontconfig libwebp5
   - mkdir travis-phantomjs
   - wget https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2 -O $PWD/travis-phantomjs/phantomjs-2.1.1-linux-x86_64.tar.bz2
   - tar -xvf $PWD/travis-phantomjs/phantomjs-2.1.1-linux-x86_64.tar.bz2 -C $PWD/travis-phantomjs
