--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,14 @@
 language: java
 
-sudo: true
+sudo: false
 
 jdk:
   - oraclejdk8
 
+env:
+  - TRAVIS=true
+
 before_install:
-  # Install PhantomJS
-  - sudo apt-get install libicu52 libjpeg8 libfontconfig libwebp5
-  - mkdir travis-phantomjs
-  - wget https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2 -O $PWD/travis-phantomjs/phantomjs-2.1.1-linux-x86_64.tar.bz2
-  - tar -xvf $PWD/travis-phantomjs/phantomjs-2.1.1-linux-x86_64.tar.bz2 -C $PWD/travis-phantomjs
-  - export PATH=$PWD/travis-phantomjs/phantomjs-2.1.1-linux-x86_64/bin:$PATH
   # Install bower, grunt and UI dependencies
   - npm install -g grunt bower
   - "(cd tests-cucumber-ui && npm install && bower install)"
