Stats with review status, render as pie chart

--- a/tests-cucumber-ui/.jshintrc
+++ b/tests-cucumber-ui/.jshintrc
@@ -13,6 +13,7 @@
   "globals": {
     "_": false,
     "angular": false,
-    "configuration": false
+    "configuration": false,
+    "Chartist": false
   }
 }
