--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ env:
   - TRAVIS=true
 
 before_install:
+  # Install a recent node version
+  - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.31.0/install.sh | bash
+  - nvm install 5.8
+  - nvm use 5.8
   # Install bower, grunt and UI dependencies
   - npm install -g grunt bower
   - "(cd tests-cucumber-ui && npm install && bower install)"
