--- a/server-config.yml
+++ b/server-config.yml
@@ -6,7 +6,7 @@ server:
   maxQueuedRequests: 2048
   idleThreadTimeout: 10 seconds
 
-mongoUri: "mongodb://192.168.99.100/reports?connectTimeoutMS=5000&socketTimeoutMS=90000&w=majority&j=true&wtimeoutMS=60000"
+mongoUri: "mongodb://${MONGO_HOST:-192.168.99.100}/${MONGO-DB:-reports}?connectTimeoutMS=5000&socketTimeoutMS=90000&w=majority&j=true&wtimeoutMS=60000"
 
 logging:
   level: INFO
