--- a/build.gradle
+++ b/build.gradle
@@ -29,15 +29,16 @@ allprojects {
     }
 
     ext.versions = [
-        dropwizard: '0.9.2',
-        orika     : '1.4.6',
-        morphia   : '1.1.1',
-        slf4j     : '1.7.13',
-        spring    : '4.2.5.RELEASE',
-        jackson   : '2.6.4',
-        junit     : '4.12',
-        assertj   : '3.4.1',
-        mockito   : '1.10.19',
+        dropwizard     : '0.9.2',
+        orika          : '1.4.6',
+        morphia        : '1.1.1',
+        slf4j          : '1.7.13',
+        spring         : '4.2.5.RELEASE',
+        jackson        : '2.6.4',
+        junit          : '4.12',
+        assertj        : '3.4.1',
+        mockito        : '1.10.19',
+        junitQuickcheck: '0.6'
     ]
 
     project.ext.replaceDependencyGroupVersion = { DependencyResolveDetails details, String group, String version ->
@@ -166,6 +167,8 @@ project("${rootProject.name}-backend") {
         compile "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:${versions.jackson}"
 
         testCompile "org.assertj:assertj-core:${versions.assertj}"
+        testCompile "com.pholser:junit-quickcheck-core:${versions.junitQuickcheck}"
+        testCompile "com.pholser:junit-quickcheck-generators:${versions.junitQuickcheck}"
 
     }
 
