--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 
 install:
   # Install UI dependencies
-  - "(cd tests-cucumber-ui && npm install && bower install)"
+  - ./gradlew npmInstall bowerInstall
   # Install Java project dependencies
   - ./gradlew assemble
 
