--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,19 @@ buildscript {
 
 }
 
+/**
+ * Replace version used by a group of dependencies.
+ *
+ * @param details Dependency details
+ * @param group Group of the dependency
+ * @param version Version to set
+ */
+void replaceDependencyGroupVersion(DependencyResolveDetails details, String group, String version) {
+    if (details.requested.group == group || details.requested.group.startsWith(group + ".")) {
+        details.useVersion version
+    }
+}
+
 
 allprojects {
 
@@ -40,12 +53,6 @@ allprojects {
         junitQuickcheck: '0.6',
         capsule        : '1.0.2'
     ]
-
-    ext.replaceDependencyGroupVersion = { DependencyResolveDetails details, String group, String version ->
-        if (details.requested.group == group || details.requested.group.startsWith(group + ".")) {
-            details.useVersion version
-        }
-    }
 
     // Maven plugin
 
@@ -121,8 +128,8 @@ allprojects {
 
                 // Override some dependency versions
                 eachDependency { DependencyResolveDetails details ->
-                    project.replaceDependencyGroupVersion(details, 'com.fasterxml.jackson', project.versions.jackson)
-                    project.replaceDependencyGroupVersion(details, 'org.slf4j', project.versions.slf4j)
+                    replaceDependencyGroupVersion(details, 'com.fasterxml.jackson', project.versions.jackson)
+                    replaceDependencyGroupVersion(details, 'org.slf4j', project.versions.slf4j)
                 }
 
             }
