--- a/build.gradle
+++ b/build.gradle
@@ -45,13 +45,15 @@ allprojects {
         orika          : '1.4.6',
         morphia        : '1.2.0',
         slf4j          : '1.7.13',
-        spring         : '4.2.6.RELEASE',
+        spring         : '4.3.0.RELEASE',
         jackson        : '2.6.4',
         junit          : '4.12',
         assertj        : '3.4.1',
         mockito        : '1.10.19',
         junitQuickcheck: '0.6',
-        capsule        : '1.0.2'
+        capsule        : '1.0.2',
+        groovy         : '2.4.7',
+        cucumberGroovy : '1.2.4'
     ]
 
     // Maven plugin
@@ -346,8 +348,8 @@ project("${rootProject.name}-example-features") {
 
     dependencies {
 
-        compile 'org.codehaus.groovy:groovy-all:2.4.6'
-        compile 'info.cukes:cucumber-groovy:1.2.4'
+        compile "org.codehaus.groovy:groovy-all:${versions.groovy}"
+        compile "info.cukes:cucumber-groovy:${versions.cucumberGroovy}"
         compile "org.slf4j:slf4j-api:${versions.slf4j}"
         compile "org.assertj:assertj-core:${versions.assertj}"
 
