--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,8 @@ allprojects {
         junitQuickcheck: '0.6',
         capsule        : '1.0.2',
         groovy         : '2.4.7',
-        cucumberGroovy : '1.2.4'
+        cucumberGroovy : '1.2.4',
+        jetty          : '9.2.13.v20150730',
     ]
 
     // Maven plugin
@@ -169,6 +170,7 @@ project("${rootProject.name}-backend") {
         compile "org.springframework:spring-context:${versions.spring}"
         compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${versions.jackson}"
         compile "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:${versions.jackson}"
+        compile "org.eclipse.jetty.websocket:javax-websocket-server-impl:${versions.jetty}"
 
         testCompile "org.assertj:assertj-core:${versions.assertj}"
         testCompile "com.pholser:junit-quickcheck-core:${versions.junitQuickcheck}"
