--- a/zucchini-ui-frontend/.jshintrc
+++ b/zucchini-ui-frontend/.jshintrc
@@ -14,6 +14,7 @@
     "_": false,
     "angular": false,
     "configuration": false,
-    "Chartist": false
+    "Chartist": false,
+    "UUID": false
   }
 }
