--- a/zucchini-ui-frontend/bower.json
+++ b/zucchini-ui-frontend/bower.json
@@ -12,7 +12,8 @@
     "ng-file-upload": "~12.0.0",
     "angular-loading-bar": "~0.8.0",
     "angular-elastic": "^2.5.1",
-    "chartist": "~0.9.7"
+    "chartist": "~0.9.7",
+    "pure-uuid": "^1.4.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
