--- a/zucchini-ui-capsule/src/docker/config.yml
+++ b/zucchini-ui-capsule/src/docker/config.yml
@@ -2,7 +2,7 @@ server:
   type: default
   rootPath: /api
 
-mongoUri: "${TC_MONGO_URL:-mongodb://mongo/reports?connectTimeoutMS=5000&socketTimeoutMS=90000&w=majority&j=true&wtimeoutMS=60000}"
+mongoUri: "${TC_MONGO_URL:-mongodb://mongo/reports?connectTimeoutMS=5000&socketTimeoutMS=90000&w=majority&journal=true&wtimeoutMS=60000}"
 
 logging:
   level: "${TC_LOGGING_LEVEL:-INFO}"
