--- a/.travis.yml
+++ b/.travis.yml
@@ -11,16 +11,17 @@ env:
 before_install:
   # Install a recent node version
   - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.31.0/install.sh | bash
-  - nvm install 5.8
-  - nvm use 5.8
+  - nvm install 6.3.1
+  - nvm use 6.3.1
   # Install Grunt and Bower
   - npm install -g grunt-cli bower
 
 install:
   # Install UI dependencies
   - ./gradlew npmInstall bowerInstall
-  # Install Java project dependencies
+  # Assemble project
   - ./gradlew assemble
 
 script:
   - ./gradlew check
+  - ./gradlew runCucumber dryRunCucumber
