--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include "${rootProject.name}-backend"
 include "${rootProject.name}-frontend"
 include "${rootProject.name}-example-features"
 include "${rootProject.name}-capsule"
+include "${rootProject.name}-mongo"
