--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ before_install:
   - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.31.0/install.sh | bash
   - nvm install 6.3.1
   - nvm use 6.3.1
-  # Install Grunt and Bower
-  - npm install -g grunt-cli bower
+  # Install Webpack
+  - npm install -g webpack
 
 install:
   # Install UI dependencies
