--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -2,14 +2,15 @@
   "name": "zucchini-ui-frontend",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --debug --progress --port 9000",
+    "dev": "webpack-dev-server --inline --debug --progress",
     "build": "webpack --progress --profile --colors"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.3",
+    "autoprefixer": "^6.4.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
+    "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.24.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
@@ -20,8 +21,10 @@
     "karma-jasmine": "^0.3.0",
     "karma-ng-html2js-preprocessor": "^0.2.0",
     "karma-phantomjs-launcher": "^1.0.0",
-    "ng-annotate-webpack-plugin": "^0.1.3",
+    "ng-annotate-loader": "^0.1.1",
     "phantomjs-prebuilt": "^2.1.5",
+    "postcss-loader": "^0.11.0",
+    "precss": "^1.4.0",
     "serve-static": "^1.10.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
