Fix Travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 
 install:
   # Install UI dependencies
-  - ./gradlew npmInstall bowerInstall
+  - ./gradlew npmInstall
   # Assemble project
   - ./gradlew assemble
 
