--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -12,6 +12,9 @@
     "babel-preset-es2015": "^6.14.0",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.24.0",
+    "eslint": "^3.4.0",
+    "eslint-friendly-formatter": "^2.0.6",
+    "eslint-loader": "^1.5.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
