Use ng-cloak to hide Angular template on load

--- a/zucchini-ui-frontend/bower.json
+++ b/zucchini-ui-frontend/bower.json
@@ -35,6 +35,12 @@
       "main": [
         "lodash.js"
       ]
+    },
+    "angular": {
+      "main": [
+        "angular.js",
+        "angular-csp.css"
+      ]
     }
   }
 }
