--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -18,6 +18,8 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
+    "html-minify-loader": "^1.1.0",
+    "img-loader": "^1.3.1",
     "jasmine": "^2.4.1",
     "jshint-stylish": "^2.1.0",
     "karma": "^0.13.0",
