Build with webpack before processing resources

--- a/build.gradle
+++ b/build.gradle
@@ -225,6 +225,8 @@ project("${rootProject.name}-frontend") {
         outputs.dir('build/dist')
     }
 
+    tasks.processResources dependsOn webpack
+
     task jsTest(type: NPMTask, description: 'Test JavaScript') {
         command = 'test'
     }
