--- a/build.gradle
+++ b/build.gradle
@@ -225,7 +225,7 @@ project("${rootProject.name}-frontend") {
         outputs.dir('build/dist')
     }
 
-    tasks.processResources dependsOn webpack
+    tasks.processResources.dependsOn webpack
 
     task jsTest(type: NPMTask, description: 'Test JavaScript') {
         command = 'test'
