--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -13,7 +13,9 @@
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.14.0",
+    "babel-plugin-import-asserts": "^3.0.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0",
     "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.26.0",
     "eslint": "^3.5.0",
