--- a/zucchini-ui-frontend/package.json
+++ b/zucchini-ui-frontend/package.json
@@ -32,6 +32,8 @@
     "karma-jasmine": "^1.0.0",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-webpack": "^1.8.0",
+    "less": "^2.7.2",
+    "less-loader": "^2.2.3",
     "ng-annotate-loader": "^0.1.0",
     "phantomjs-prebuilt": "^2.1.0",
     "postcss-loader": "^1.1.0",
