--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,11 @@ env:
 
 before_install:
   # Install a recent node version
-  - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.31.0/install.sh | bash
-  - nvm install 6.3.1
-  - nvm use 6.3.1
+  - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.0/install.sh | bash
+  - nvm install 7.5.0 && nvm use 7.5.0
+  # Install Yarn
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH=$HOME/.yarn/bin:$PATH
 
 install:
   # Install UI dependencies
