YARN commands instead of NPM

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 
 install:
   # Install UI dependencies
-  - ./gradlew npmInstall
+  - ./gradlew yarnInstall
   # Assemble project
   - ./gradlew assemble
 
