--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,6 @@ plugins {
     id 'org.ajoberstar.grgit' version '1.5.1' apply false
 }
 
-
 /**
  * Replace version used by a group of dependencies.
  *
@@ -50,19 +49,20 @@ allprojects {
     }
 
     ext.versions = [
-        dropwizard     : '1.0.5',
+        dropwizard     : '1.0.6',
         orika          : '1.5.0',
-        morphia        : '1.3.1',
+        morphia        : '1.3.2',
         slf4j          : '1.7.21',
         spring         : '4.3.6.RELEASE',
         junit          : '4.12',
         assertj        : '3.6.2',
-        mockito        : '2.6.9',
-        junitQuickcheck: '0.6.1',
+        mockito        : '2.7.4',
+        junitQuickcheck: '0.7',
         capsule        : '1.0.3',
         groovy         : '2.4.8',
         cucumberGroovy : '1.2.5',
         jetty          : '9.3.9.v20160517',
+        guava          : '19.0',
     ]
 
     ext.getDockerTag = {
@@ -292,7 +292,7 @@ project("${rootProject.name}-example-features") {
         compile "info.cukes:cucumber-groovy:${versions.cucumberGroovy}"
         compile "org.slf4j:slf4j-api:${versions.slf4j}"
         compile "org.assertj:assertj-core:${versions.assertj}"
-        compile "com.google.guava:guava:19.0"
+        compile "com.google.guava:guava:${versions.guava}"
 
     }
 
