--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ plugins {
     id 'us.kirchmeier.capsule' version '1.0.2' apply false
     id 'com.google.osdetector' version '1.4.0' apply false
     id 'org.ajoberstar.grgit' version '1.5.1' apply false
+    id 'net.ltgt.apt' version '0.9' apply false
 }
 
 /**
@@ -49,20 +50,21 @@ allprojects {
     }
 
     ext.versions = [
-        dropwizard     : '1.0.6',
-        orika          : '1.5.0',
-        morphia        : '1.3.2',
-        slf4j          : '1.7.21',
-        spring         : '4.3.6.RELEASE',
-        junit          : '4.12',
-        assertj        : '3.6.2',
-        mockito        : '2.7.4',
-        junitQuickcheck: '0.7',
-        capsule        : '1.0.3',
-        groovy         : '2.4.8',
-        cucumberGroovy : '1.2.5',
-        jetty          : '9.3.9.v20160517',
-        guava          : '19.0',
+        dropwizard        : '1.0.6',
+        orika             : '1.5.0',
+        morphia           : '1.3.2',
+        slf4j             : '1.7.21',
+        spring            : '4.3.6.RELEASE',
+        junit             : '4.12',
+        assertj           : '3.6.2',
+        mockito           : '2.7.4',
+        junitQuickcheck   : '0.7',
+        capsule           : '1.0.3',
+        groovy            : '2.4.8',
+        cucumberGroovy    : '1.2.5',
+        jetty             : '9.3.9.v20160517',
+        guava             : '19.0',
+        hibernateValidator: '5.2.4.Final',
     ]
 
     ext.getDockerTag = {
@@ -170,8 +172,11 @@ allprojects {
 project("${rootProject.name}-backend") {
 
     apply plugin: 'java'
+    apply plugin: 'net.ltgt.apt'
 
     dependencies {
+
+        apt group: 'org.hibernate', name: 'hibernate-validator-annotation-processor', version: versions.hibernateValidator
 
         compile "io.dropwizard:dropwizard-core:${versions.dropwizard}"
         compile "ma.glasnost.orika:orika-core:${versions.orika}"
