Define Docker build args with a special method

--- a/build.gradle
+++ b/build.gradle
@@ -278,9 +278,7 @@ project("${rootProject.name}-capsule") {
     }
 
     dockerBuild {
-        buildArgs = [
-            ZUCCHINI_VERSION: project.version,
-        ]
+        buildArg 'ZUCCHINI_VERSION', project.version
     }
 
 }
