Integrate React UI in the build

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'zucchini-ui'
 
 include "${rootProject.name}-backend"
 include "${rootProject.name}-frontend"
+include "${rootProject.name}-frontend-react"
 include "${rootProject.name}-example-features"
 include "${rootProject.name}-capsule"
 include "${rootProject.name}-mongo"
