--- a/build.gradle
+++ b/build.gradle
@@ -242,6 +242,29 @@ project("${rootProject.name}-frontend") {
 }
 
 
+project("${rootProject.name}-frontend-react") {
+
+    task webpack(type: YarnTask, description: 'Run Webpack') {
+        command = 'run'
+        args = ['build']
+
+        inputs.dir('src')
+        inputs.file('package.json')
+        inputs.file('webpack.config.js')
+
+        outputs.dir('build/dist')
+    }
+
+    // Fake tasks, for project build
+    task assemble
+    task build
+
+    tasks.assemble.dependsOn webpack
+    tasks.build.dependsOn assemble
+
+}
+
+
 project("${rootProject.name}-capsule") {
 
     apply plugin: 'us.kirchmeier.capsule'
