Search within scenarios

--- a/server-config.yml
+++ b/server-config.yml
@@ -7,7 +7,7 @@ server:
   maxQueuedRequests: 2048
   idleThreadTimeout: 10 seconds
 
-mongoUri: "mongodb://${MONGO_HOST:-localhost}/${MONGO-DB:-reports}?connectTimeoutMS=5000&socketTimeoutMS=90000&w=majority&journal=true&wtimeoutMS=60000"
+mongoUri: "mongodb://${MONGO_HOST:-localhost}/${MONGO-DB:-zucchini}?connectTimeoutMS=5000&socketTimeoutMS=90000&w=majority&journal=true&wtimeoutMS=60000"
 
 logging:
   level: INFO
