Purge test runs

--- a/zucchini-ui-frontend-react/config.json
+++ b/zucchini-ui-frontend-react/config.json
@@ -3,6 +3,7 @@
     "port": 9001
   },
   "ui": {
-    "backendBaseUri": "http://localhost:8080"
+    "backendBaseUri": "http://localhost:8080",
+    "testRunPurgeDelayInDays": 30
   }
 }
